# redfin

./: .gitignore  MANIFEST  README  README.md  pyproject.toml  setup.cfg  setup.py  test.py  test2.py
.github/workflows/: lint.yml  publish.yml  tests.yml
redfin/: __init__.py  cli.py  redfin.py
redfin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_redfin.py
