[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redfin"
version = "0.2.0"
description = "A Python wrapper around the unofficial Redfin API."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Peter Stenger", email = "peter.promotions.stenger@gmail.com"}]
maintainers = [{name = "Preston Tamkin"}]
keywords = ["redfin", "api", "wrapper", "real-estate"]
requires-python = ">=3.8"
dependencies = ["requests"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ["pytest", "requests"]

[project.scripts]
redfin = "redfin.cli:main"

[project.urls]
Homepage = "https://github.com/prestomation/pyredfin"
"Bug Tracker" = "https://github.com/prestomation/pyredfin/issues"
