[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redfin"
version = "0.2.1"
description = "A Python wrapper around the unofficial Redfin API."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Peter Stenger", email = "peter.promotions.stenger@gmail.com"}]
maintainers = [{name = "Preston Tamkin"}]
keywords = ["redfin", "api", "wrapper", "real-estate"]
requires-python = ">=3.8"
dependencies = ["requests"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ["pytest", "requests", "ruff", "ty"]

[project.scripts]
redfin = "redfin.cli:main"

[project.urls]
Homepage = "https://github.com/reteps/redfin"
"Bug Tracker" = "https://github.com/reteps/redfin/issues"

[tool.ruff]
target-version = "py38"
exclude = ["build"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by ruff format

[tool.ty.environment]
python-version = "3.8"
